integrate galleria code

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -16,6 +16,20 @@
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
         <script src="../scripts/load.js"></script>
+        <script src="../lib/galleria/galleria-1.2.9.js"></script>
+        <script>
+            Galleria.loadTheme('../lib/galleria/galleria.classic.min.js');
+            Galleria.run('#galleria');
+        </script>
+        <style>
+            #galleria {
+                height: 570px;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+                -webkit-user-drag: none;
+            }
+        </style>
     </head>
     <body>
         <div id="Page">
@@ -40,6 +54,92 @@
                     <img class="" src="../images/banners/boothPage.jpg" alt="">
                     <img class="reins small" src="../images/header/reins.png" alt="">
                 </section>
+                <table>
+                    <tr>
+                        <td class="mini"><h2>Photos from the Event</h2></td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td class="mini">&nbsp;</td>
+                        <td class="mini">&nbsp;</td>
+                        <td class="mini">&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" class="mini">
+                            <div id="galleria">
+                                <a href="../media/750/IMG_7852.JPG"><img src="../media/100/IMG_7852.JPG" data-title="IMG_7852 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7852.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7858.JPG"><img src="../media/100/IMG_7858.JPG" data-title="IMG_7858 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7858.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7859.JPG"><img src="../media/100/IMG_7859.JPG" data-title="IMG_7859 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7859.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7860.JPG"><img src="../media/100/IMG_7860.JPG" data-title="IMG_7860 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7860.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7892.JPG"><img src="../media/100/IMG_7892.JPG" data-title="IMG_7892 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7892.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7896.JPG"><img src="../media/100/IMG_7896.JPG" data-title="IMG_7896 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7896.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7897.JPG"><img src="../media/100/IMG_7897.JPG" data-title="IMG_7897 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7897.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7901.JPG"><img src="../media/100/IMG_7901.JPG" data-title="IMG_7901 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7901.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7904.JPG"><img src="../media/100/IMG_7904.JPG" data-title="IMG_7904 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7904.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7907.JPG"><img src="../media/100/IMG_7907.JPG" data-title="IMG_7907 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7907.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7908.JPG"><img src="../media/100/IMG_7908.JPG" data-title="IMG_7908 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7908.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7911.JPG"><img src="../media/100/IMG_7911.JPG" data-title="IMG_7911 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7911.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7938.JPG"><img src="../media/100/IMG_7938.JPG" data-title="IMG_7938 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7938.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7941.JPG"><img src="../media/100/IMG_7941.JPG" data-title="IMG_7941 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7941.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7955.JPG"><img src="../media/100/IMG_7955.JPG" data-title="IMG_7955 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7955.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7956.JPG"><img src="../media/100/IMG_7956.JPG" data-title="IMG_7956 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7956.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7957.JPG"><img src="../media/100/IMG_7957.JPG" data-title="IMG_7957 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7957.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7959.JPG"><img src="../media/100/IMG_7959.JPG" data-title="IMG_7959 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7959.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7961.JPG"><img src="../media/100/IMG_7961.JPG" data-title="IMG_7961 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7961.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7966.JPG"><img src="../media/100/IMG_7966.JPG" data-title="IMG_7966 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7966.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7967.JPG"><img src="../media/100/IMG_7967.JPG" data-title="IMG_7967 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7967.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7971.JPG"><img src="../media/100/IMG_7971.JPG" data-title="IMG_7971 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7971.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7972.JPG"><img src="../media/100/IMG_7972.JPG" data-title="IMG_7972 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7972.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7973.JPG"><img src="../media/100/IMG_7973.JPG" data-title="IMG_7973 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7973.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7974.JPG"><img src="../media/100/IMG_7974.JPG" data-title="IMG_7974 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7974.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7980.JPG"><img src="../media/100/IMG_7980.JPG" data-title="IMG_7980 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7980.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7981.JPG"><img src="../media/100/IMG_7981.JPG" data-title="IMG_7981 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7981.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7983.JPG"><img src="../media/100/IMG_7983.JPG" data-title="IMG_7983 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7983.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7984.JPG"><img src="../media/100/IMG_7984.JPG" data-title="IMG_7984 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7984.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7990.JPG"><img src="../media/100/IMG_7990.JPG" data-title="IMG_7990 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7990.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7992.JPG"><img src="../media/100/IMG_7992.JPG" data-title="IMG_7992 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7992.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7993.JPG"><img src="../media/100/IMG_7993.JPG" data-title="IMG_7993 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7993.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7994.JPG"><img src="../media/100/IMG_7994.JPG" data-title="IMG_7994 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7994.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7995.JPG"><img src="../media/100/IMG_7995.JPG" data-title="IMG_7995 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7995.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7996.JPG"><img src="../media/100/IMG_7996.JPG" data-title="IMG_7996 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7996.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7997.JPG"><img src="../media/100/IMG_7997.JPG" data-title="IMG_7997 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7997.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_7998.JPG"><img src="../media/100/IMG_7998.JPG" data-title="IMG_7998 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_7998.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8003.JPG"><img src="../media/100/IMG_8003.JPG" data-title="IMG_8003 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8003.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8007.JPG"><img src="../media/100/IMG_8007.JPG" data-title="IMG_8007 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8007.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8008.JPG"><img src="../media/100/IMG_8008.JPG" data-title="IMG_8008 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8008.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8009.JPG"><img src="../media/100/IMG_8009.JPG" data-title="IMG_8009 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8009.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8010.JPG"><img src="../media/100/IMG_8010.JPG" data-title="IMG_8010 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8010.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8012.JPG"><img src="../media/100/IMG_8012.JPG" data-title="IMG_8012 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8012.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8018.JPG"><img src="../media/100/IMG_8018.JPG" data-title="IMG_8018 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8018.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8021.JPG"><img src="../media/100/IMG_8021.JPG" data-title="IMG_8021 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8021.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8022.JPG"><img src="../media/100/IMG_8022.JPG" data-title="IMG_8022 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8022.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8024.JPG"><img src="../media/100/IMG_8024.JPG" data-title="IMG_8024 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8024.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8025.JPG"><img src="../media/100/IMG_8025.JPG" data-title="IMG_8025 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8025.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8026.JPG"><img src="../media/100/IMG_8026.JPG" data-title="IMG_8026 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8026.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8027.JPG"><img src="../media/100/IMG_8027.JPG" data-title="IMG_8027 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8027.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8028.JPG"><img src="../media/100/IMG_8028.JPG" data-title="IMG_8028 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8028.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8030.JPG"><img src="../media/100/IMG_8030.JPG" data-title="IMG_8030 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8030.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8037.JPG"><img src="../media/100/IMG_8037.JPG" data-title="IMG_8037 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8037.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8038.JPG"><img src="../media/100/IMG_8038.JPG" data-title="IMG_8038 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8038.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8039.JPG"><img src="../media/100/IMG_8039.JPG" data-title="IMG_8039 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8039.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8040.JPG"><img src="../media/100/IMG_8040.JPG" data-title="IMG_8040 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8040.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8041.JPG"><img src="../media/100/IMG_8041.JPG" data-title="IMG_8041 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8041.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8043.JPG"><img src="../media/100/IMG_8043.JPG" data-title="IMG_8043 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8043.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8044.JPG"><img src="../media/100/IMG_8044.JPG" data-title="IMG_8044 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8044.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8046.JPG"><img src="../media/100/IMG_8046.JPG" data-title="IMG_8046 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8046.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8047.JPG"><img src="../media/100/IMG_8047.JPG" data-title="IMG_8047 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8047.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8048.JPG"><img src="../media/100/IMG_8048.JPG" data-title="IMG_8048 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8048.JPG target=_blank>Download full size</a>"></a>
+                                <a href="../media/750/IMG_8052.JPG"><img src="../media/100/IMG_8052.JPG" data-title="IMG_8052 / Sibos 2013 / Dubai" data-description="<a href=../media/2000/IMG_8052.JPG target=_blank>Download full size</a>"></a>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td width="55%">&nbsp;</td>
+                        <td width="4%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
+                    </tr>
+                </table>
                 <article class="mini">
                 </article>
             </div>
