--- a/pages/photos.html
+++ b/pages/photos.html
@@ -50,10 +50,7 @@
                 </nav>
             </header>
             <div id="Feature">
-                <section id="Banner">
-                    <img class="" src="../images/banners/boothPage.jpg" alt="">
-                    <img class="reins small" src="../images/header/reins.png" alt="">
-                </section>
+                <p>&nbsp;</p>
                 <table>
                     <tr>
                         <td class="mini"><h2>Photos from the Event</h2></td>
