update photos and giving remove 2 and add new photos

--- a/pages/giving.html
+++ b/pages/giving.html
@@ -88,23 +88,19 @@
                                             <table>
                                                 <tr>
                                                     <td><p><em>Dubai Center for Special Needs</em><br>
-                                                            68 votes (37%)<br>
-                                                            <strong>$3,696</strong></p></td>
+                                                            <strong>$3,696</strong> (37%)</p></td>
                                                 </tr>
                                                 <tr>
-                                                    <td><p><em>American   Refugee Committee</em><br>
-                                                            54 votes (29%)<br>
-                                                            <strong>$2,935 </strong></p></td>
+                                                    <td><p><em>American Refugee Committee</em><br>
+                                                            <strong>$2,935 </strong> (29%)</p></td>
                                                 </tr>
                                                 <tr>
-                                                    <td><p><em>Project   Vietnam Foundation</em><br>
-                                                            37 votes (20%)<br>
-                                                            <strong>$1,977 </strong></p></td>
+                                                    <td><p><em>Project Vietnam Foundation</em><br>
+                                                            <strong>$1,977 </strong> (20%)</p></td>
                                                 </tr>
                                                 <tr>
-                                                    <td><p><em>The   Bread Tin</em><br>
-                                                            26 votes (14%)<br>
-                                                            <strong>$1,392 </strong></p></td>
+                                                    <td><p><em>The Bread Tin</em><br>
+                                                            <strong>$1,392 </strong> (14%)</p></td>
                                                 </tr>
                                             </table>
                                         </td>
@@ -114,7 +110,7 @@
                                             <p><strong>Click on each nonprofit to learn more:</strong></p>
                                             <ul>
                                                 <li><a class="scroll" href="#bread">The Bread Tin</a> is
-                                                a new giving club that teaches young professionals about philanthropy in London </li>
+                                                    a new giving club that teaches young professionals about philanthropy in London </li>
                                                 <li><a class="scroll" href="#arc">American Refugee Committee</a> helps
                                                     victims of war and civil conflict rebuild their lives in seven countries around the world </li>
                                                 <li><a class="scroll" href="#dcfsn">Dubai Center for Special Needs</a> provides
