--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <meta charset="UTF-8">
 <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
 <meta http-equiv="Refresh" content="1; URL=./pages/" />
+<title>Wells Fargo at Sibos 2013</title>
+<meta name=”description” content=”Join Wells Fargo in Dubai for Sibos 2013. Explore this site for a special edition of Momentum magazine and see a list of events and Wells Fargo speakers.”>
