--- a/pages/home.html
+++ b/pages/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
         <title id="head0">Wells Fargo at Sibos 2013</title>
+        <meta name=”description” content=”Join Wells Fargo in Dubai for Sibos 2013. Explore this site for a special edition of Momentum magazine and see a list of events and Wells Fargo speakers.”>
         <script src="../scripts/metas.js"></script>
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
