--- a/pages/explore.html
+++ b/pages/explore.html
@@ -15,7 +15,7 @@
             window.isIE = true;
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
-        <script src="../scripts/main.js"></script>
+        <script src="../scripts/load.js"></script>
     </head>
     <body>
         <div id="Page">
@@ -47,7 +47,7 @@
             <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/exploreDubaiPage.png" alt="">
-                    <img class="banner" src="../images/header/reins.png" alt="">
+                    <img class="reins small" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
