--- a/pages/home.html
+++ b/pages/home.html
@@ -15,7 +15,7 @@
             window.isIE = true;
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
-        <script src="../scripts/main.js"></script>
+        <script src="../scripts/load.js"></script>
     </head>
     <body>
         <div id="Page">
@@ -46,12 +46,14 @@
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <section id="Banner">
-                    <img class="fade" src="../images/banners/aboutWF.png" alt="">
-                    <img class="fade" src="../images/banners/exploreDubai.png" alt="">
-                    <img class="fade" src="../images/banners/giveaway_orange.png" alt="">
-                    <img class="fade" src="../images/banners/pony.png" alt="">
-                    <img class="fade click2run" src="../images/banners/home.png" alt="">
-                    <img class="banner1" src="../images/header/reins.png" alt="">
+                    <img class="fade bnr1" src="../images/banners/home.png"             alt="JOIN US IN DUBAI September 16 – 19, 2013">
+                    <img class="fade bnr6" src="../images/banners/tedx.jpg"             alt="Come watch the TEDxUNPlaza conference from the Wells Fargo booth Tuesday through Thursday.">
+                    <img class="fade bnr5" src="../images/banners/aboutWF.png"          alt="ABOUT WELLS FARGO • We’re one of the largest financial institutions in the U.S. and serve 70 million customers in 125 countries around the world.">
+                    <img class="fade bnr4" src="../images/banners/exploreDubai.png"     alt="EXPLORE DUBAI • Home to over two million people, this cosmopolitan gateway between the east and west features architecture, attractions, and opportunities unlike anything you'll find elsewhere in the world.">
+                    <img class="fade bnr3" src="../images/banners/giveaway_ochre.jpg"   alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                    <img class="fade bnr2" src="../images/banners/pony.jpg"             alt="Share your pony story with us #WFPony">
+                    <img class="fade bnr1" src="../images/banners/home.png"             alt="JOIN US IN DUBAI September 16 – 19, 2013">
+                    <img class="reins large" src="../images/header/reins.png">
                 </section>
                 <table>
                     <tr>
@@ -71,7 +73,7 @@
                         <td>&nbsp;</td>
                         <td colspan="2" rowspan="2">
                             <p><a title="Booth map" href="booth.html">
-                                    <img src="../images/booth_F87.png" width="320" height="128" alt="Booth F87">
+                                    <img src="../images/tiles/comeSeeUs.png" width="320" height="128" alt="Booth F87">
                                 </a></p>
                             <p><a title="Momentum Magazine" href="../media/momentum.pdf">
                                     <img src="../images/banners/momentum.png" width="320" height="164" alt="Magazine" style="margin-bottom: -2em;">
@@ -80,19 +82,16 @@
                     </tr>
                     <tr>
                         <td class="blocks"><p>
-                                <img src="../images/tile_home_events.png" width="307" height="120">
+                                <img src="../images/tiles/home_events.png" width="307" height="120">
                             </p>
                             <p><strong>Renew friendships and create new ones. </strong></p>
-                            <p>We’re proud to be hosting our annual Sibos
-                                Celebration reception at Dubai’s most prestigious
-                                landmark – Burj Khalifa – the tallest structure in
-                                the world. In addition, we’ll be hosting a welcome
-                                reception at the Wells Fargo Sibos booth and a
-                                breakfast seminar on “Rapidly evolving payment and
-                                trade corridors.” </p></td>
+                            <p>We’re proud to be hosting our annual Sibos Celebration reception at Dubai’s most prestigious
+                                landmark – Burj Khalifa – the tallest structure in the world.
+                                In addition, we’ll be hosting a welcome reception at the Wells Fargo Sibos booth and a
+                                breakfast seminar on “Rapidly evolving payment and trade corridors.” </p></td>
                         <td>&nbsp;</td>
                         <td class="blocks"><p>
-                                <img src="../images/tile_home_getInvolved.png" width="225" height="121">
+                                <img src="../images/tiles/home_getInvolved.jpg" width="225" height="121">
                             </p>
                             <p><strong>By working together</strong>, we can make a difference in our international communities. </p>
                             <p>You are invited, for the third year in a row, to cast a vote for one of four nonprofits that
@@ -109,7 +108,7 @@
                     </tr>
                 </table>
                 <div class="popup">
-                    <img id="booth_map" src="../images/booth_map.gif" tabindex="-1">
+                    <img id="booth_map" src="../images/photos/booth_map.gif" tabindex="-1">
                     <br>
                     CLICK OUTSIDE IMAGE TO CLOSE
                 </div>
