--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
             window.isIE = true;
             $(function(){ $('html').addClass('msie'); });
             </script><![endif]-->
-        <script src="../scripts/main.js"></script>
+        <script src="../scripts/load.js"></script>
     </head>
     <body>
         <div id="Page">
@@ -47,7 +47,7 @@
             <div id="feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
-                    <img class="banner" src="../images/header/reins.png" alt="">
+                    <img class="reins small" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
@@ -85,7 +85,7 @@
                                     London, Seoul, Shanghai, Singapore, Taipei, Tokyo, Toronto, and the Cayman Islands</li>
                                 <li>More than 3,000 team members covering the global needs of our clients</li>
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
-                                <li>Customers in over 125 countries</li>
+                                <li>Customers in 125 countries</li>
                             </ul>
                             <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
                         <td>&nbsp;</td>
