--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,6 @@
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
-        <script src="/lib/js/global.js"></script>
         <!--[if IE]><script>
             window.isIE = true;
             $(function(){ $('html').addClass('msie'); });
@@ -19,58 +18,50 @@
     </head>
     <body>
         <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
-                    <img src="../images/header/wf-sibos.png" alt="Sibos 2013" width="222" height="64" align="left">
-                    <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
+                    <a href="./home.html"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
+                    <a href="//wellsfargo.com"><img class="stage" src="../images/header/stagecoach.png" alt="Together we’ll go far"></a>
                 </div>
-                <div class="navb">
-                    <!--  -->
-                    <a href="home.html">Home</a>
-                    <!--  -->
-                    <a href="about.html">About Wells Fargo</a>
-                    <!--  -->
-                    <a href="events.html">Sibos Events</a>
-                    <!--  -->
-                    <a href="booth.html">Wells Fargo Booth</a>
-                    <!--  -->
-                    <a href="speakers.html">Sibos Speakers</a>
-                    <!--  -->
-                    <a href="explore.html">Explore Dubai</a>
-                    <!--  -->
-                    <a href="giving.html">Charitable giving</a>
-                    <!--  -->
-                </div>
+                <nav>
+                    <!--  --> <a href="./home.html">Home</a>
+                    <!--  --> <a href="./about.html">About Wells Fargo</a>
+                    <!--  --> <a href="./events.html">Sibos Events</a>
+                    <!--  --> <a href="./booth.html">Our Booth</a>
+                    <!--  --> <a href="./speakers.html">Sibos Speakers</a>
+                    <!--  --> <a href="./explore.html">Explore Dubai</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
+                </nav>
             </header>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+            <div id="Feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/aboutWellsFargoPage.png" alt="">
                     <img class="reins small" src="../images/header/reins.png" alt="">
                 </section>
                 <table>
                     <tr>
-                        <td width="65%"><h2>About Wells Fargo</h2></td>
+                        <td><h2>About Wells Fargo</h2></td>
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td width="65%" rowspan="2"><p>Wells Fargo is one of the largest banks in the United States,
-                                and is the most valuable bank in the world in terms of market capitalization.
-                                Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
-                                mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
-                                35 countries to support customers who conduct business in the global economy. </p>
-                            <p>Wells Fargo serves one in three businesses in America.
-                                We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
-                                financial needs and help them succeed financially. The GFI team executes this vision by serving the
-                                increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
-                                and non-bank financial institutions in the markets where we conduct business.</p></td>
+                        <td rowspan="3"><article>
+                                <p>Wells Fargo is one of the largest banks in the United States,
+                                    and is the most valuable bank in the world in terms of market capitalization.
+                                    Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
+                                    mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
+                                    35 countries to support customers who conduct business in the global economy. </p>
+                                <p>Wells Fargo serves one in three businesses in America.
+                                    We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
+                                    financial needs and help them succeed financially. The GFI team executes this vision by serving the
+                                    increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
+                                    and non-bank financial institutions in the markets where we conduct business.</p>
+                            </article></td>
                         <td>&nbsp;</td>
                         <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
                     </tr>
                     <tr>
-                        <td width="2%">&nbsp;</td>
-                        <td width="30%" valign="top" class="blocks"><p><strong>Learn more about Wells Fargo</strong></p>
+                        <td rowspan="2">&nbsp;</td>
+                        <td valign="top" class="blocks"><p><strong>Learn more about Wells Fargo</strong></p>
                             <ul>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
@@ -78,7 +69,12 @@
                             </ul></td>
                     </tr>
                     <tr>
-                        <td colspan="2"><p><strong>Our global presence includes: </strong></p>
+                        <td><p>&nbsp;</p>
+                            <p>&nbsp;</p></td>
+                    </tr>
+                    <tr>
+                        <td><article>
+                            <p><strong>Our global presence includes: </strong></p>
                             <ul>
                                 <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
                                     Hong Kong, <br>
@@ -87,36 +83,31 @@
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
                                 <li>Customers in 125 countries</li>
                             </ul>
-                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
+                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p>
+                        </article></td>
+                        <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
+                        <td width="66%">&nbsp;</td>
+                        <td width="3%">&nbsp;</td>
+                        <td width="33%">&nbsp;</td>
                     </tr>
                 </table>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            </div>
             <footer>
-                <div id="sharebar">
+                <div id="Share">
                     <p class="cap">Share this page
-                        <!--  -->
-                        <span id="st_twitter"></span>
-                        <!--  -->
-                        <span id="st_linkedin"></span>
-                        <!--  -->
-                        <span id="st_email"></span>
-                        <!--  -->
-                        <span id="st_facebook"></span>
-                        <!--  -->
-                        <span id="st_googleplus"></span>
-                        <!--  -->
-                        <span id="st_pinterest"></span>
-                        <!--  -->
+                        <!--  --> <span id="st_twitter"></span>
+                        <!--  --> <span id="st_linkedin"></span>
+                        <!--  --> <span id="st_email"></span>
+                        <!--  --> <span id="st_facebook"></span>
+                        <!--  --> <span id="st_googleplus"></span>
+                        <!--  --> <span id="st_pinterest"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem --></div>
+        </div>
     </body>
 </html>
