--- a/pages/events.html
+++ b/pages/events.html
@@ -10,7 +10,6 @@
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
-        <script src="/lib/js/global.js"></script>
         <!--[if IE]><script>
             window.isIE = true;
             $(function(){ $('html').addClass('msie'); });
@@ -19,32 +18,22 @@
     </head>
     <body>
         <div id="Page">
-            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
             <header>
                 <div class="mast">
-                    <img src="../images/header/wf-sibos.png" alt="Sibos 2013" width="222" height="64" align="left">
-                    <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
+                    <a href="./home.html"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
+                    <a href="//wellsfargo.com"><img class="stage" src="../images/header/stagecoach.png" alt="Together we’ll go far"></a>
                 </div>
-                <div class="navb">
-                    <!--  -->
-                    <a href="home.html">Home</a>
-                    <!--  -->
-                    <a href="about.html">About Wells Fargo</a>
-                    <!--  -->
-                    <a href="events.html">Sibos Events</a>
-                    <!--  -->
-                    <a href="booth.html">Wells Fargo Booth</a>
-                    <!--  -->
-                    <a href="speakers.html">Sibos Speakers</a>
-                    <!--  -->
-                    <a href="explore.html">Explore Dubai</a>
-                    <!--  -->
-                    <a href="giving.html">Charitable giving</a>
-                    <!--  -->
-                </div>
+                <nav>
+                    <!--  --> <a href="./home.html">Home</a>
+                    <!--  --> <a href="./about.html">About Wells Fargo</a>
+                    <!--  --> <a href="./events.html">Sibos Events</a>
+                    <!--  --> <a href="./booth.html">Our Booth</a>
+                    <!--  --> <a href="./speakers.html">Sibos Speakers</a>
+                    <!--  --> <a href="./explore.html">Explore Dubai</a>
+                    <!--  --> <a href="./giving.html">Charitable Giving</a>
+                </nav>
             </header>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+            <div id="Feature">
                 <section id="Banner">
                     <img class="" src="../images/banners/sibosEventsPage.png" alt="">
                     <img class="reins small" src="../images/header/reins.png" alt="">
@@ -52,15 +41,13 @@
                 <table>
                     <tr>
                         <td colspan="5"><h2>Sibos Events</h2>
-                            <p>Renew friendships and create new ones.
-                                We&rsquo;re proud to be hosting our annual Sibos
-                                Celebration reception at Dubai&rsquo;s most
-                                prestigious landmark – Burj Khalifa – the tallest
-                                structure in the world. In addition, we&rsquo;ll
-                                be hosting a welcome reception at the Wells Fargo
-                                Sibos booth and a breakfast seminar on
-                                &ldquo;Rapidly evolving payment and trade
-                                corridors.&rdquo;</p></td>
+                            <article>
+                                <p>Renew friendships and create new ones.
+                                    We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s
+                                    most prestigious landmark – Burj Khalifa – the tallest structure in the world.
+                                    In addition, we&rsquo;ll be hosting a welcome reception at the Wells Fargo Sibos booth
+                                    and a breakfast seminar on the &ldquo;Rapidly evolving payment and trade corridors.&rdquo;</p>
+                            </article></td>
                     </tr>
                     <tr>
                         <td class="blocks ribron"><h3>Annual Celebration</h3></td>
@@ -78,7 +65,6 @@
                         <td>
                         <td class="blocks"><p><strong>Tuesday, September 17</strong><br>
                                 <strong>4:00 p.m. to 5:30 p.m. </strong> <br>
-                                Booth Reception <br>
                                 Wells Fargo booth No. F87, <br>
                                 Exhibition Hall Zone B </p></td>
                         <td>
@@ -106,28 +92,19 @@
                     </tr>
                 </table>
             </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <footer>
-                <div id="sharebar">
+                <div id="Share">
                     <p class="cap">Share this page
-                        <!--  -->
-                        <span id="st_twitter"></span>
-                        <!--  -->
-                        <span id="st_linkedin"></span>
-                        <!--  -->
-                        <span id="st_email"></span>
-                        <!--  -->
-                        <span id="st_facebook"></span>
-                        <!--  -->
-                        <span id="st_googleplus"></span>
-                        <!--  -->
-                        <span id="st_pinterest"></span>
-                        <!--  -->
+                        <!--  --> <span id="st_twitter"></span>
+                        <!--  --> <span id="st_linkedin"></span>
+                        <!--  --> <span id="st_email"></span>
+                        <!--  --> <span id="st_facebook"></span>
+                        <!--  --> <span id="st_googleplus"></span>
+                        <!--  --> <span id="st_pinterest"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
-            <!-- #EndLibraryItem -->
         </div>
         <blockquote>&nbsp;</blockquote>
     </body>
