--- a/pages/about.html
+++ b/pages/about.html
@@ -3,11 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=8">
+        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
         <title id="head0">Wells Fargo at Sibos 2013</title>
         <script src="../scripts/metas.js"></script>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
+        <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
         <!--[if IE]><script>
@@ -20,7 +25,7 @@
         <div id="Page">
             <header>
                 <div class="mast">
-                    <a href="./home.html"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
+                    <a href="./"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
                     <a href="//wellsfargo.com"><img class="stage" src="../images/header/stagecoach.png" alt="Together we’ll go far"></a>
                 </div>
                 <nav>
@@ -40,28 +45,23 @@
                 </section>
                 <table>
                     <tr>
-                        <td><h2>About Wells Fargo</h2></td>
+                        <td class="mini"><h2>About Wells Fargo</h2></td>
                         <td colspan="2">&nbsp;</td>
                     </tr>
                     <tr>
-                        <td rowspan="3"><article>
-                                <p>Wells Fargo is one of the largest banks in the United States,
-                                    and is the most valuable bank in the world in terms of market capitalization.
-                                    Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
-                                    mortgage, consumer, and commercial finance through various distribution channels. We have offices in more than
-                                    35 countries to support customers who conduct business in the global economy. </p>
-                                <p>Wells Fargo serves one in three businesses in America.
-                                    We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
-                                    financial needs and help them succeed financially. The GFI team executes this vision by serving the
-                                    increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
-                                    and non-bank financial institutions in the markets where we conduct business.</p>
-                            </article></td>
-                        <td>&nbsp;</td>
-                        <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
-                    </tr>
-                    <tr>
+                        <td rowspan="2" class="mini"><p>Wells Fargo is one of the largest banks in the United States,
+                                and is the most valuable bank in the world in terms of market capitalization.
+                                Founded in 1852 and headquartered in San Francisco, Wells Fargo provides banking, insurance, investments,
+                                mortgage, consumer, and commercial finance through various distribution channels.
+                                We have offices in more than 35 countries to support customers who conduct business in the global economy. </p>
+                            <p>Wells Fargo serves one in three businesses in America.
+                                We&rsquo;ve operated under the same vision for decades: We want to satisfy all our customers&rsquo;
+                                financial needs and help them succeed financially. The GFI team executes this vision by serving the
+                                increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
+                                and non-bank financial institutions in the markets where we conduct business.</p></td>
                         <td rowspan="2">&nbsp;</td>
-                        <td valign="top" class="blocks"><p><strong>Learn more about Wells Fargo</strong></p>
+                        <td class="blocks mini"><h3 class="chev"><span>Resources</span></h3>
+                            <p><strong>Learn more about Wells Fargo</strong></p>
                             <ul>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                                 <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
@@ -73,18 +73,16 @@
                             <p>&nbsp;</p></td>
                     </tr>
                     <tr>
-                        <td><article>
-                            <p><strong>Our global presence includes: </strong></p>
+                        <td class="mini"><p><strong>Our global presence includes: </strong></p>
                             <ul>
-                                <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC,
-                                    Hong Kong, <br>
+                                <li>Worldwide reach with over 35 overseas offices and branch locations in DIFC, Hong Kong,
                                     London, Seoul, Shanghai, Singapore, Taipei, Tokyo, Toronto, and the Cayman Islands</li>
                                 <li>More than 3,000 team members covering the global needs of our clients</li>
                                 <li>Relationships with over 2,000 financial institutions overseas and in the U.S.</li>
                                 <li>Customers in 125 countries</li>
                             </ul>
-                            <p>To learn more, just click on one of the links below to download our brochure or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p>
-                        </article></td>
+                            <p>To learn more, just click on one of the links below to download our brochure
+                                or visit <a href="http://www.wellsfargo.com/international">wellsfargo.com/international</a>.</p></td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
@@ -103,11 +101,11 @@
                         <!--  --> <span id="st_email"></span>
                         <!--  --> <span id="st_facebook"></span>
                         <!--  --> <span id="st_googleplus"></span>
-                        <!--  --> <span id="st_pinterest"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
             </footer>
         </div>
+        <div id="Mobile"></div>
     </body>
 </html>
