--- a/pages/_nav.html
+++ b/pages/_nav.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+        <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
         <title>navport</title>
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
-        <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
+        <!--  -->
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
         <!--[if IE]><script>
@@ -21,17 +20,20 @@
         <div id="Mobile" class="dev">
             <header>
                 <div class="logobar"><img title="Wells Fargo" src="../images/misc/wftype.png"></div>
-                <h1>Sibos Dubai <img class="share" title="share" src="../images/misc/share.png"></h1>
+                <h1>Sibos Dubai
+                    <img class="share" title="Reveal sharing" src="../images/misc/share.png">
+                    <img class="home" title="Main navigation" src="../images/misc/home.png">
+                </h1>
             </header>
             <section class="port">
                 <article>
-                    <h2>SEPTEMBER 1 – 19, 2013</h2>
+                    <h2>SEPTEMBER 16 – 19, 2013</h2>
                     <section id="Banner">
-                        <img class="fade bnr7" src="../images/mobile/momentum_hi.png"      alt="momentum_hi">
-                        <img class="fade bnr2" src="../images/mobile/pony_hi.png"          alt="Share your pony story with us #WFPony">
                         <img class="fade bnr3" src="../images/mobile/giveaway_hi.png"      alt="Want one of these? • Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.">
+                        <img class="fade bnr7" src="../images/mobile/momentum_hi.png"      alt="Special Sibos edition of Momentum magazine DOWNLOAD TODAY">
                         <img class="fade bnr6" src="../images/mobile/tedx_hi.png"          alt="Come watch the TEDxUNPlaza conference from the Wells Fargo booth Tuesday through Thursday.">
-                        <img class="fade bnr8" src="../images/mobile/booth_hi.png"         alt="booth_hi">
+                        <img class="fade bnr2" src="../images/mobile/pony_hi.png"          alt="Share your pony story with us #WFPony">
+                        <img class="fade bnr8" src="../images/mobile/booth_hi.png"         alt="Come see us AT STAND F87">
                         <img class="fade bnr1" src="../images/mobile/booth_hi.png"         alt="foo" style="visibility: hidden;">
                     </section>
                     <nav>
@@ -46,7 +48,7 @@
             </section>
             <footer>
                 <img class="reins" src="../images/header/reins-mini.png" alt="">
-                <p><a href="home.html">Full site</a> | <strong>Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
+                <p><strong><a href="home.html">Full site</a> | Mobile site</strong> <br> © 2013 Wells Fargo. All rights reserved. ECG-999915</p>
             </footer>
         </div>
     </body>
