--- a/pages/about.html
+++ b/pages/about.html
@@ -2,17 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+        <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
         <title id="head0">Wells Fargo at Sibos 2013</title>
         <script src="../scripts/metas.js"></script>
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
-        <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
+        <!--  -->
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
         <!--[if IE]><script>
@@ -96,11 +92,7 @@
             <footer>
                 <div id="Share">
                     <p class="cap">Share this page
-                        <!--  --> <span id="st_twitter"></span>
-                        <!--  --> <span id="st_linkedin"></span>
-                        <!--  --> <span id="st_email"></span>
-                        <!--  --> <span id="st_facebook"></span>
-                        <!--  --> <span id="st_googleplus"></span>
+                        <span class="st_twitter"></span> <span class="st_linkedin"></span> <span class="st_email"></span> <span class="st_facebook"></span> <span class="st_googleplus"></span>
                     </p>
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
