--- a/pages/mini.html
+++ b/pages/mini.html
@@ -2,17 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=8">
-        <script>location.href.match(/\.com.*(\/[^\.\/]+)+$/)&&(location.href+='/')</script>
+        <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
         <title id="head0">Wells Fargo at Sibos 2013</title>
         <script src="../scripts/metas.js"></script>
+        <!--  -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes">
+        <meta name="viewport" content="width=device-width, minimum-scale=0.75, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
         <!--  -->
         <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
         <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
-        <link href="../styles/mini.css" media="all" rel="stylesheet" type="text/css">
+        <!--  -->
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
         <!--[if IE]><script>
@@ -22,10 +22,7 @@
         <script src="../scripts/load.js"></script>
     </head>
     <body>
-
-
-
-        <div id="Page">
+        <div id="Page" class="hide">
             <header>
                 <div class="mast">
                     <a href="./"><img class="logo" src="../images/header/wf-sibos.png" alt="Sibos 2013"></a>
@@ -42,8 +39,7 @@
                 </nav>
             </header>
         </div>
-
         <div id="Mobile"></div>
-
+        <div id="Share"><span class="st_twitter_large"></span><span class="st_linkedin_large"></span><span class="st_email_large"></span><span class="st_facebook_large"></span><span class="st_googleplus_large"></span></div>
     </body>
 </html>
