--- a/pages/giving.html
+++ b/pages/giving.html
@@ -32,6 +32,7 @@
                     <!--  --> <a href="./speakers.html">Sibos Speakers</a>
                     <!--  --> <a href="./explore.html">Explore Dubai</a>
                     <!--  --> <a href="./giving.html">Charitable Giving</a>
+                    <!--  --> <a href="./photos.html">Photos</a>
                 </nav>
             </header>
             <div id="Feature">
@@ -81,6 +82,29 @@
                         <td rowspan="2">
                             <div class="tofix">
                                 <table>
+                                    <tr>
+                                        <td class="blocks mini">
+                                            <h3 class="chev"><span>FINAL TOTALS</span></h3>
+                                            <table>
+                                                <tr>
+                                                    <td><p><em>Dubai Center for Special Needs</em><br>
+                                                            <strong>$3,696</strong> (37%)</p></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p><em>American Refugee Committee</em><br>
+                                                            <strong>$2,935 </strong> (29%)</p></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p><em>Project Vietnam Foundation</em><br>
+                                                            <strong>$1,977 </strong> (20%)</p></td>
+                                                </tr>
+                                                <tr>
+                                                    <td><p><em>The Bread Tin</em><br>
+                                                            <strong>$1,392 </strong> (14%)</p></td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
                                     <tr>
                                         <td class="blocks mini"><h3 class="chev"><span>learn more</span></h3>
                                             <p><strong>Click on each nonprofit to learn more:</strong></p>
